static/css/style.css
a {
    text-decoration: none;
}

body {
    background-color: #F9FAFC;
    font-family: Lato, 'sans-serif';
}

.seelet {
    margin-top: 100px;
    height: 100px;
}

.sign-up-container {
    margin-top: 150px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    text-decoration: none;
    list-style: none;
}

.sign-in-container {
    margin-top: 150px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    text-decoration: none;
    list-style: none;
}

.intro-heading {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 80px 0 40px;
    color: #F9FAFC;
    background-color: #234E5A;
}

.style-menu-item {
    color: #000;
}

.intro-heading .title{
    font-size: 50px;

}

.intro-heading .desc-one{
    font-size: 20px;

}

.navbar-brand {
    font-family: Roboto, 'sans-serif';
}

.make-margin-right {
    margin-right: 20px;
}

.navbar-nav .nav-item .style-text {
    background-color: #051B11;
    border: 1px solid #0F5132;
    color: #75B898;
    font-weight: bold;
}

.navbar-nav .nav-item .style-text-color {
    color: #F9FAFC;
}

.navbar-nav .nav-item .style-user-color {
    color: #F9FAFC;
    font-weight: 600;
}

.home-page-container {
    padding: 0 12%;
}

.footer-container {
    background-color: #234E5A;
    padding: 70px 0;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.text-white a{
    color: #F9FAFC;
}

.brand {
    font-family: Lato, sans-serif;
    font-size: 1.4rem;
    font-weight: 700;
    color: #4A4A4F;
}

.card-title {
    text-decoration: none;
    font-weight:900;
    font-size: 20px;
    color: #212529;
}

.card-title .card-author{
    font-weight:900;
    font-size: 12px;
}

.card-title .card-text {
    font-weight:300;
    font-size: 16px;
}

.card-title:hover {
    color: #212529;
}

.card-created-date {
    font-size: 12px;
}

.card-created-date i {
    margin-left: 2px;
}

.card-img-top {
    width: 100%;
    height: 25vh;
    object-fit: cover;
}

.postdetails-user-wrapper {
    padding: 100px 200px;

}

.postdetails-user-wrapper .card-title {
    margin: 15px 0 30px;
}

.image-hold img {
    background-color: #F9FAFC;
    width: 80px;
    height: 80px;
    border-radius: 100%;
}

.info-row {
    flex-direction: column;
    justify-content: center;
    text-align: center;
    align-items: center;
    padding: 50px 0;
}

.profile .profile-img img {
    width: 80px;
    height: 80px;
    border-radius: 100%;
}

.name-and-time {
    margin-left: 5px;
}

.name-and-time p {
    margin: 0 !important;
}

.name-and-time .user-name {
    color: #234E5A
}

.name-and-time .date-and-time {
    font-size: 12px;
}

.post-image-container img{
    overflow: none;
    background-color: #F9FAFC;
    margin-top: 20px;
    width: 100%;
    height: 40vh;
    object-fit: cover;
}

.postdetails-user-wrapper hr {
    margin-top: 50px;
}

.postdetails-user-wrapper .card-text {
    margin-top: 20px;
}

.likes-comments .icons {
    margin-left: 50px;
}

.likes-comments button {
    outline: none;
    background: transparent;
    border: 1px solid transparent;
}

.btn-like {
    color: #ff0000;
}

.sign-up-btn {
    background-color: #23BBBB;
    color: #F9FAFC;
}

.form-style {
    margin-top: 1.3em;
}

.edit {
    margin-right: 5px;
}

.card-footer {
    background: transparent;
    border-top: 0px;
    padding-bottom: 20px;
}

.card-footer .btn {
    width: 100%;
}

.card-footer .read-more-btn {
    background-color: #234E5A;
    border-color: #234E5A;
}

.card-footer .read-more-btn:hover {
    background-color: #3FAA85;
    border-color: #3FAA85;
}

.confirm-sign-out {
    margin-top: 50px;
}

.image-container .comments-icon {
    margin-left: 20px;
    color: #212529;
}

.color-icon {
    color: #ff0000;
}

.create-post-heading {
    text-align: center;
    margin-top: 20px;
}

.pagination-nav {
    padding-top: 20px;
}

.style-kind {
    background-color: #051B11;
    border: 1px solid #0F5132;
    color: #a0f6cd;
    font-weight: bold;
    float: right;
    padding: 2px 20px;
    border-bottom-left-radius: 30%;
    border-top-right-radius: 30%;
}

@media (max-width: 768px) {
    .postdetails-user-wrapper {
        padding: 100px 50px;
    
    }
}

@media (max-width: 480px) {
    .postdetails-user-wrapper {
        padding: 50px 0px;
    
    }
}

